Fixes Issue #32, hides icon on smaller screens. Also changed projects class to change to column from screen width 768px screen

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -485,14 +485,6 @@ body {
         padding: 10px;
         margin-left: 0px;
     }
-    .projects {
-        flex-direction: column;
-    }
-
-    .project { 
-        width: 100%;
-        margin: 10px 0px;
-    }
 
     .header {
         text-align: center;
@@ -509,5 +501,13 @@ body {
     }
     .modal-title img { 
         padding-top: 10px;
+    }
+    .projects {
+        flex-direction: column;
+        align-items: center;
+    }
+    .project { 
+        width: 100%;
+        margin: 10px 0px;
     }
 }
